--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "cd client && npm run build",
-    "install-client": "cd client && npm install",
-    "heroku-postbuild": "npm run install-client && npm run build",
+    "client-install": "cd client && npm install",
     "client": "cd client && npm start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "start": "node index.js",
-    "dev": "concurrently \"npm start\" \"cd client && npm start\""
+    "dev": "concurrently \"npm start\" \"cd client && npm start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
